# openstack-controller

./: .gitignore  .gitreview  404.html  Dockerfile  Known-Issues.md  Makefile  README.md  build.sh  crd.yaml  deployment.yaml  index.html  install.sh  kopf-session-timeout.path  mkdocs.yml  pre-build.sh  pre-tox.sh  rbac.yaml  requirements.txt  res.yaml  setup.cfg  setup.py  tox.ini  tox_install.sh  uwsgi.ini
architecture/: index.html
architecture/openstack-controller-admission/: index.html
charts/openstack-operator/: values.yaml
charts/osh-operator/: Chart.yaml  values.yaml
crds/: 01-namespaces.yaml  03-kopfpeering-crd.yaml  04-openstackdeployment-crd.yaml  06-openstack-controller.yaml  06-osh-operator.yaml  helmcontroller.yaml  osh_deployment.yaml  osh_peering.yaml  rbac.yaml
deploy/helmbundle/: 02-helmbundle-crd.yaml  03-local-volume-provisioner.yaml  05-helm-controller.yaml  06-ceph-controller.yaml  06-openstack-operator.yaml  06-osh-operator.yaml
developer/: index.html
docs/: developer.md  index.md  requirements.txt
docs/quick-start/: aio-installation.md
docs/source/: conf.py  index.rst
etc/openstack-controller/: 01-controller-default.ini
examples/master/: core-ceph-ceph-dvr.yaml  core-ceph-local-non-dvr.yaml  core-ceph.yaml
examples/queens/: core-ceph-ceph-dvr.yaml  core-ceph-local-non-dvr.yaml  core-ceph.yaml
examples/rocky/: core-ceph-ceph-dvr.yaml  core-ceph-local-non-dvr.yaml
examples/stein/: core-ceph-ceph-dvr.yaml  core-ceph-local-non-dvr.yaml  core-ceph.yaml
examples/train/: core-ceph-ceph-dvr.yaml  core-ceph-local-non-dvr.yaml
koshkaas/: main.py
migration_helpers/: functions-common  globals
migration_helpers/cinder/: 01-configure-backends.sh
migration_helpers/database/: functions  migrate-service-db.sh
migration_helpers/dns/: 01-create-mcp1-coredns-cr.sh
migration_helpers/heat/: 01-get-heat-creds.sh  create_stack.sh
migration_helpers/keystone/: 01-ensure-fernet-keys-disabled.sh  02-sync-fernet-keys.sh
migration_helpers/model/: 01-prepare-globals.sh
migration_helpers/nova/: 02-copy-ssh-keys.sh
migration_helpers/octavia/: 01-copy-certs-ssh-key.sh
migration_helpers/osdpls/: 01-osh-dev.yaml  02-osh-dev.yaml
migration_helpers/public_endpoints_redirect/: 01-create-public-tls-secret.sh  02-create-forwarder-cr.sh
migration_helpers/tf/: 02-prepare-tf-globals.sh  03-update-configs.sh  04-switch-analytics.sh  06-map-vrouter-conf.sh
migration_helpers/workflow/: 05-prepare-globals.sh  08-check-openstack-service-api.sh
openstack_controller/: batch_health.py  cache.py  ceph_api.py  constants.py  exception.py  health.py  helm.py  helmbundle.py  hooks.py  kube.py  layers.py  maintenance.py  openstack.py  openstack_utils.py  openstackdeployment.py  osdplstatus.py  resource_view.py  secrets.py  settings.py  utils.py  websocket_client.py
openstack_controller/admission/: controller.py
openstack_controller/cli/: check_osdplsecret.py  convert_credential_secrets.py  ensure_shared_resources.py  helm_2to3.py  job_rerun.py  move_secret_fields.py  osctl.py  ovs_ovn_migration.py  remove_default_finalizer.py
openstack_controller/controllers/: configmaps.py  health.py  helmbundle.py  maintenance.py  node.py  node_maintenance_request.py  openstackdeployment.py  openstackdeploymentsecret.py  openstackdeploymentstatus.py  probe.py  secrets.py
openstack_controller/exporter/: constants.py  exporter.py  settings.py
openstack_controller/osctl/: shell.py  utils.py
openstack_controller/services/: __init__.py  base.py
openstack_controller/templates/: artifacts.yaml
osh_operator/: ceph.py  helmbundle.py  kube.py  layers.py  main.py  openstack.py  openstackdeployment.py  secrets.py  utils.py
osh_operator/services/: __init__.py  base.py
osh_operator/templates/: artifacts.yaml  compute.yaml
quick-start/access-openstack/: index.html
quick-start/aio-installation/: index.html
releasenotes/notes/: add-cinder-service-cleanup-4f706205e1ef0e53.yaml  add-local-proxy-support-dae937ef17d4785f.yaml  add-logout-sso-support-67376a958fb9b930.yaml  add-lvm-support-f5bc473678cdbb94.yaml  add-masakari-d7387b3907e3a648.yaml  add-oidcouathsslvalidate-d5b7be175167ae36.yaml  add-proxy-secret-handling-1311bdd5f246804e.yaml  cinder-lvm-2b47cb031546c703.yaml  cinder-lvm-backend-b26148d1fab3a075.yaml  custom-policies-eab7a05d8d78ddfb.yaml  drop-helmbundle-support-623c210773f8ca6b.yaml  enable-apparmor-libvirt-3c6c941e80f36f8e.yaml  fix-cinder-pod-names-64ef179dc76e9493.yaml  (+20 more)
search/: search_index.json
tests/: generate_crd_fixtures.py
tests/unit/: __init__.py  (+16 more)
tools/: docker-compose.yaml  fill_internal_svc_ips.sh  get_os_clouds.sh  get_service_account.sh  get_version.sh  healthz  regenerate_policy_outputs.py  run-compose.sh  run_with_service_account.sh  sync_helm_charts.py
virtual_lab/: install.sh
(+941 files in other folders)
