[metadata]
name = openstack-controller
author = Mirantis Inc
author_email = oscore-dev@mirantis.com
summary = Kopf-based operator to deploy OpenStack-Helm onto KaaS
description_file =
    README.md
home_page = https://github.com/pshchelo/openstack-controller
classifier =
    Development Status :: 1 - Alpha
    Environment :: Kubernetes
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.7
setup_requires =
    pbr

[files]
packages =
    openstack_controller
data_files =
    openstack_controller/admission/schemas.json = openstack_controller/admission/schemas.json

[entry_points]
console_scripts =
    osctl-job-rerun = openstack_controller.cli.job_rerun:main
    osctl-ensure-shared-resources = openstack_controller.cli.ensure_shared_resources:main
    osctl-2to3 = openstack_controller.cli.helm_2to3:main
wsgi_scripts =
    admission_controller = openstack_controller.admission.wsgi:main

[extras]
test =
    pytest
    pytest-mock
    flake8<3.8
    black
    pytest-cov
    pytest-asyncio
#    black==19.3b0
